--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,11 @@
         android:title="@string/highest_rated"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_favorite"
+        android:title="@string/favorite"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
