--- a/app/src/main/res/layout/activity_details_view.xml
+++ b/app/src/main/res/layout/activity_details_view.xml
@@ -16,13 +16,11 @@
             android:background="@color/purple.light"
             android:layout_weight="6">
 
-
             <TextView
-                android:id="@+id/original_title"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-
                 android:text="title"
                 android:textSize="20sp"
                 android:layout_marginLeft="2dp"
@@ -41,14 +39,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/image_thumbnail"
+                        android:id="@+id/movie_poster"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="10dp"
@@ -104,15 +101,14 @@
             android:background="@color/purple">
 
             <TextView
-                android:id="@+id/overview"
+                android:id="@+id/plot_synopsis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="overview"
                 android:layout_gravity="top"
                 android:textSize="16sp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="sans-serif" />
 
-                />
         </LinearLayout>
 
         <LinearLayout
@@ -123,22 +119,18 @@
             android:orientation="vertical">
 
             <TextView
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Trailers:"
                 android:layout_gravity="top"
                 android:textSize="16sp"
-                android:fontFamily="sans-serif"
-                />
+                android:fontFamily="sans-serif" />
 
             <Button
                 android:id="@+id/button.play.trailer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/youtube.button"
-
-                />
+                android:text="@string/youtube.button" />
 
         </LinearLayout>
 
