--- a/app/src/main/res/layout/activity_details_view.xml
+++ b/app/src/main/res/layout/activity_details_view.xml
@@ -1,138 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/purple.light"
-            android:layout_weight="6">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="title"
-                android:textSize="20sp"
-                android:layout_marginLeft="2dp"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="70">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/movie_poster"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="10dp"
-                        android:scaleType="centerCrop"/>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp">
-
-                    <TextView
-                        android:id="@+id/vote_average"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="vote_average"
-                        android:textSize="16sp"
-                        android:fontFamily="sans-serif"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/release_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="release_date"
-                        android:textSize="16sp"
-                        android:fontFamily="sans-serif"
-                        android:textStyle="bold" />
-
-
-                   <Button
-                       android:id="@+id/heart.button"
-                       android:layout_width="wrap_content"
-                       android:layout_height="match_parent"
-                       android:text="@string/cheked.heart"/>
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="30"
-            android:background="@color/purple">
-
-            <TextView
-                android:id="@+id/plot_synopsis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="overview"
-                android:layout_gravity="top"
-                android:textSize="16sp"
-                android:fontFamily="sans-serif" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="30"
-            android:background="@color/purple"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Trailers:"
-                android:layout_gravity="top"
-                android:textSize="16sp"
-                android:fontFamily="sans-serif" />
-
-            <Button
-                android:id="@+id/button.play.trailer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/youtube.button" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-</ScrollView>
+    android:layout_height="match_parent"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
