--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,8 +15,14 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_favorite"
-        android:title="@string/favorite"
+    android:id="@+id/action_favorite"
+    android:title="@string/favorite"
+    android:orderInCategory="100"
+    app:showAsAction="never" />
+
+    <item
+        android:id="@+id/clear_db"
+        android:title="@string/clear_db"
         android:orderInCategory="100"
         app:showAsAction="never" />
 
