--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,10 @@
     <color name="purple.light3">#CE93D8</color>
     <color name="purple">#BA68C8</color>
 
+
+
+    <color name="off_black">#9b9b9b</color>
+    <color name="video_background">#349484</color>
+    <color name="off_white">#fafafa</color>
+
 </resources>
