--- a/app/src/main/res/layout/activity_favorite_movies.xml
+++ b/app/src/main/res/layout/activity_favorite_movies.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="udacity.popular_movies.activity.FavoriteMoviesActivity">
+    tools:context="vlad.kolomysov.popularmoviesstage2.FavoriteMoviesActivity">
 
 
     <LinearLayout
@@ -31,7 +31,7 @@
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment_popularmovies"
-        android:name="udacity.popular_movies.fragment.FavoriteMoviesFragment"
+        android:name="vlad.kolomysov.popularmoviesstage2.fragment.FavoriteMoviesFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
