--- a/app/src/main/res/layout-sw600dp/activity_favorite_movies.xml
+++ b/app/src/main/res/layout-sw600dp/activity_favorite_movies.xml
@@ -34,7 +34,7 @@
 
         <fragment
             android:id="@+id/fragment_popularmovies"
-            android:name="udacity.popular_movies.fragment.FavoriteMoviesFragment"
+            android:name="vlad.kolomysov.popularmoviesstage2.fragment.FavoriteMoviesFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
